fix spacing between navigation links

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -64,7 +64,8 @@ header {
             position: fixed;
             top: 8vh;
             right: 0;
-            padding: 1vh 5vw 0;
+            padding: 3vh 5vw 0;
+            gap: 2vh;
             z-index: 500;
 
             a {
